--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-matplotlib==2.1.0
-tensorflow==1.15.2
-numpy==1.13.3
+matplotlib==2.0.2
+numpy
+scipy
 inflect==0.2.5
 librosa==0.6.0
-scipy==1.0.0
-Unidecode==1.0.22
-pillow
-transliterate
+tensorflow>=1.10.0,<=1.15.2
+tensorboardX
+Unidecode
+tqdm
+openai-whisper
