Enhance install.sh script for comprehensive environment setup, including system package installation, NVIDIA driver checks, and Python virtual environment creation. Update requirements.txt to remove specific version constraints for matplotlib and librosa, and replace tensorflow with tensorflow-cpu for better compatibility.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-matplotlib==2.0.2
+matplotlib
 numpy
 scipy
 inflect==0.2.5
-librosa==0.6.0
-tensorflow>=1.10.0,<=1.15.2
+librosa
+tensorflow-cpu
 tensorboardX
 Unidecode
 tqdm
