Refactor audio processing scripts to enhance performance and usability. Update install.sh for clearer dataset processing options, modify requirements.txt to replace OpenAI Whisper with Hugging Face transformers for improved batch processing, and optimize smart_segmenter.py for parallel processing of audio files. Update transcribe.py for batch transcription using transformers pipeline.

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,8 @@ tensorflow-cpu
 tensorboardX
 Unidecode
 tqdm
-openai-whisper
+# Заменено на transformers для более производительной пакетной обработки
+# openai-whisper
+transformers
+accelerate
+datasets
