Датасет работает Enhance install.sh to include dependency cleanup and batch size input for transcription. Update requirements.txt to replace tensorflow-cpu with soundfile and specify transformers version. Improve transcribe.py with audio file validation and error handling for out-of-memory issues during transcription.

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,13 @@ numpy
 scipy
 inflect==0.2.5
 librosa
-tensorflow-cpu
+soundfile
 tensorboardX
 Unidecode
 tqdm
 # Заменено на transformers для более производительной пакетной обработки
 # openai-whisper
-transformers
+transformers==4.41.2
 accelerate
 datasets
+opencv-python-headless
