Update .gitignore to exclude additional data and output directories. Refactor data_utils.py for improved file path handling and error reporting. Enhance hparams.py with updated dataset paths and enable FP16 training. Modify install.sh for better cleanup and logging, and add auto-launch for TensorBoard and MLflow. Improve training script with MLflow integration for experiment tracking and metrics logging. Update requirements.txt to include new dependencies for FP16 support and monitoring tools. Refactor layers.py and plotting_utils.py for compatibility with newer library versions.

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,17 @@ __pycache__/
 # Системные файлы
 .DS_Store
 Thumbs.db 
+
+.yaml
+/mlruns/
+/output/
+/data/checkpoint/
+/data/dataset/
+/data/segment_audio/
+/data/audio/
+/data/dataset/
+/data/segment_audio/
+/data/audio/
+/data/dataset/
+/data/segment_audio/
+/data/audio/
