--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ soundfile
 tensorboardX
 Unidecode
 tqdm
+streamlit
 # Заменено на transformers для более производительной пакетной обработки
 # openai-whisper
 transformers==4.41.2
@@ -19,3 +20,9 @@ apex
 # Для мониторинга обучения
 tensorboard>=2.0
 mlflow>=2.13
+
+# Для веб-интерфейса
+streamlit>=1.28.0
+plotly>=5.0.0
+pillow>=9.0.0
+pandas>=1.5.0
