--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,22 @@
-matplotlib
-numpy
-scipy
-inflect==0.2.5
-librosa
-soundfile
-tensorboardX
-Unidecode
-tqdm
-streamlit
+numpy==1.21.6
+torch==1.13.1
+torchaudio==0.13.1
+librosa==0.9.2
+scipy==1.7.3
+matplotlib==3.5.3
+tensorboard==2.11.2
+Unidecode==1.3.6
+inflect==6.0.2
+pillow==9.3.0
+streamlit==1.25.0
+soundfile==0.12.1
+mlflow==2.1.1
+optuna>=3.0.0
+requests>=2.25.0
+pandas>=1.3.0
+pyyaml>=5.4.0
+flask>=2.0.0
+
 # Заменено на transformers для более производительной пакетной обработки
 # openai-whisper
 transformers==4.41.2
@@ -24,5 +33,5 @@ mlflow>=2.13
 # Для веб-интерфейса
 streamlit>=1.28.0
 plotly>=5.0.0
-pillow>=9.0.0
 pandas>=1.5.0
+PyYAML>=5.0
