Обновление конфигурации портов в config.yaml и web_interfaces.py для оптимизации интерфейсов Smart Tuner. Порт для Optuna Dashboard изменен на 5002, а соответствующие сообщения в интерфейсе обновлены для отражения новых настроек.

--- a/smart_tuner/config.yaml
+++ b/smart_tuner/config.yaml
@@ -167,14 +167,14 @@ mlflow:
 ports:
   mlflow: 5000              # Эксперименты и метрики  
   tensorboard: 5001         # Графики обучения
-  streamlit: 5003           # TTS Demo (перенесен на 5003)
+  optimization_engine: 5002 # Optuna Dashboard (перенесен на 5002)
+  streamlit: 5003           # TTS Demo
   log_watcher: 5004         # Мониторинг логов в реальном времени  
   metrics_store: 5005       # API для метрик и статистики
-  optimization_engine: 5006 # Optuna Dashboard
-  param_scheduler: 5007     # Планировщик гиперпараметров
-  early_stop_controller: 5008  # Контроллер раннего останова
-  alert_manager: 5009       # Управление уведомлениями
-  model_registry: 5010      # Реестр моделей
+  param_scheduler: 5006     # Планировщик гиперпараметров
+  early_stop_controller: 5007  # Контроллер раннего останова
+  alert_manager: 5008       # Управление уведомлениями
+  model_registry: 5009      # Реестр моделей
 
 # Настройки ресурсов
 resources:
