--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ streamlit==1.25.0
 soundfile==0.12.1
 mlflow==2.1.1
 optuna>=3.0.0
+optuna-dashboard>=0.18.0
 requests>=2.25.0
 pandas>=1.3.0
 pyyaml>=5.4.0
