Обновление конфигурации адаптивного советника в config.yaml для изменения стратегии управления learning rate. Увеличение LR на 20% для выхода из плато и добавление логики изменения LR в случае нестабильности. Обновление метода обработки действий в early_stop_controller.py для улучшения диагностики и управления гиперпараметрами. Изменения в логировании для повышения информативности.

--- a/smart_tuner/config.yaml
+++ b/smart_tuner/config.yaml
@@ -116,7 +116,7 @@ adaptive_advisor:
     stagnation:
       name: "change_lr"                  # Название действия
       params:
-        multiplier: 0.8                  # Уменьшить LR на 20%
+        multiplier: 1.2                  # Увеличиваем LR на 20%, чтобы выбить из плато
     
     overfitting:
       name: "increase_regularization"    # Пример другого действия
@@ -124,8 +124,9 @@ adaptive_advisor:
         dropout_increase: 0.05
     
     instability:
-      name: "stop_run"                   # В случае нестабильности - остановить
-      params: {}
+      name: "change_lr"                  # Вместо остановки, пробуем "вылечить"
+      params:
+        multiplier: 0.5                  # Резко уменьшаем LR в 2 раза
 
 # Настройки Telegram уведомлений
 telegram:
